--- a/resume-craft/package.json
+++ b/resume-craft/package.json
@@ -16,6 +16,9 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.7",
+    "@tiptap/extension-text-align": "^2.11.4",
+    "@tiptap/extension-underline": "^2.11.4",
     "@tiptap/pm": "^2.11.3",
     "@tiptap/react": "^2.11.3",
     "@tiptap/starter-kit": "^2.11.3",
