--- a/resume-craft/package.json
+++ b/resume-craft/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
+    "react-zoom-pan-pinch": "^3.7.0",
     "shadcn": "^3.4.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
